--- a/_posts/0000-01-02-mquinlan0824.md
+++ b/_posts/0000-01-02-mquinlan0824.md
@@ -2,5 +2,5 @@
 layout: slides
 title: "Welcome to our second slide!"
 ---
-Your text
+**"Only in the darkness can you see the stars."**
 Use the left arrow to go back!
